--- a/css/styles.css
+++ b/css/styles.css
@@ -301,6 +301,13 @@ section#IMG6{
 
 
 
+  .divPng {
+    width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+
 /* PARALLAX */
 
 
