--- a/css/translated.css
+++ b/css/translated.css
@@ -183,6 +183,57 @@ header {
   transition: 0.5s;
   /* box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.1); */ }
 
+.iconText {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 80vw;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10vh;
+  margin-bottom: 10vh; }
+
+.iconList {
+  width: 40vw;
+  margin-left: auto;
+  margin-right: auto; }
+
+.iconList2 {
+  color: #01a3a4;
+  font-size: 3.5rem;
+  font-family: helvetica;
+  text-align: left;
+  margin-left: 10vw;
+  margin-right: auto; }
+
+.iconList3 {
+  width: 40vw;
+  margin-left: auto;
+  margin-right: auto; }
+
+.icon {
+  width: 40vw;
+  margin-left: auto;
+  margin-right: auto; }
+
+.icon2 {
+  display: block;
+  align-items: center;
+  width: 50vw;
+  align-self: center;
+  margin-left: auto;
+  margin-right: auto; }
+
+.frase {
+  color: #01a3a4;
+  font-size: 2rem;
+  font-family: helvetica;
+  font-style: italic;
+  text-align: justify;
+  margin-left: 5vw;
+  margin-right: auto; }
+
 /* MAIN */
 /* #mainGallery{
     max-width: 1200px;
@@ -203,9 +254,7 @@ header {
 /* GALERIA DE FOTOS */
 #grilla {
   display: grid;
-  grid-template-areas: "IMG1 IMG1 IMG1 IMG2 IMG2 IMG2"
- "IMG3 IMG3 IMG4 IMG4 IMG5 IMG5"
- "IMG6 IMG6 IMG6 IMG6 IMG5 IMG5";
+  grid-template-areas: "IMG1 IMG1 IMG1 IMG2 IMG2 IMG2" "IMG3 IMG3 IMG4 IMG4 IMG5 IMG5" "IMG6 IMG6 IMG6 IMG6 IMG5 IMG5";
   grid-template-rows: repeat(12 1fr);
   /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; */
   gap: 1.5rem;
@@ -251,6 +300,53 @@ section#IMG6 {
   border: #147283;
   border-radius: 15px;
   box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.3); }
+  .quienesSomos .quienesSomos__img {
+    display: block;
+    width: 40vw;
+    padding: 2rem;
+    border-radius: 15px; }
+  .quienesSomos .quienesSomos__title {
+    font-size: 3em;
+    color: #ffffff;
+    text-align: center;
+    font-family: helvetica;
+    background: linear-gradient(to right, #03788e, #01a3a4);
+    border-radius: 5px;
+    width: 100%; }
+  .quienesSomos .quienesSomos__text {
+    font-size: 1.1em;
+    color: #01a3a4;
+    font-family: helvetica;
+    padding: 3rem;
+    text-align: justify; }
+  .quienesSomos .quienesSomos__text2 {
+    font-size: 1.1em;
+    color: #01a3a4;
+    font-family: helvetica;
+    text-align: left;
+    padding: 0.6rem;
+    margin-left: 0%; }
+  .quienesSomos .quienesSomos__button {
+    text-decoration: none;
+    font-size: 1.1em;
+    color: #ffffff;
+    background-color: #01a3a4;
+    border-radius: 5px;
+    font-family: helvetica;
+    padding: 1rem;
+    margin-left: 40%;
+    margin-right: 40%; }
+  .quienesSomos .quienesSomos__button:hover {
+    text-decoration: none;
+    font-size: 1.1em;
+    color: #147283;
+    background-color: #ffffff;
+    border: 1px;
+    border-color: #01a3a4;
+    border-radius: 5px;
+    font-family: helvetica;
+    padding: 1rem;
+    text-align: justify; }
 
 .quienesSomosSection1 {
   display: flex;
@@ -260,28 +356,7 @@ section#IMG6 {
   width: 40vw;
   padding: 2rem; }
 
-.quienesSomos .quienesSomos__img {
-  display: block;
-  width: 40vw;
-  padding: 2rem;
-  border-radius: 15px; }
-
-.quienesSomos .quienesSomos__title {
-  font-size: 3em;
-  color: #ffffff;
-  font-family: helvetica;
-  background: linear-gradient(to right, #03788e, #01a3a4);
-  border-radius: 5px;
-  width: 100%; }
-
-.quienesSomos .quienesSomos__text {
-  font-size: 1.1em;
-  color: #01a3a4;
-  font-family: helvetica;
-  padding: 3rem;
-  text-align: justify; }
-
-.quienesSomos .quienesSomos__button {
+#btButton {
   text-decoration: none;
   font-size: 1.1em;
   color: #ffffff;
@@ -292,7 +367,7 @@ section#IMG6 {
   margin-left: 40%;
   margin-right: 40%; }
 
-.quienesSomos .quienesSomos__button:hover {
+#btButton:hover {
   text-decoration: none;
   font-size: 1.1em;
   color: #147283;
@@ -374,7 +449,8 @@ section#IMG6 {
   -webkit-text-fill-color: transparent;
   color: #147283;
   text-align: center;
-  padding: 5rem; }
+  padding: 5rem;
+  margin-top: 3rem; }
 
 #imagen1 {
   width: 30%;
@@ -406,6 +482,22 @@ a {
 article {
   color: #147283;
   font-family: helvetica; }
+
+.tableTitle {
+  color: #01a3a4;
+  font-size: 3.5rem;
+  font-family: helvetica;
+  text-align: left;
+  margin-left: 10vw;
+  margin-right: auto; }
+
+.tableText {
+  color: #01a3a4;
+  font-size: 2.5rem;
+  font-family: helvetica;
+  text-align: left;
+  margin-left: 10vw;
+  margin-right: auto; }
 
 /*FOOTER*/
 .footer {
@@ -472,14 +564,14 @@ P {
 
 #cardText {
   font-size: 1.1em;
-  color: #147283;
+  color: #01a3a4;
   font-family: helvetica;
   padding: 3rem;
   text-align: justify; }
 
 #cardTitle {
   font-size: 2.1em;
-  color: #147283;
+  color: #01a3a4;
   font-family: helvetica;
   padding: 1rem;
   text-align: center; }
@@ -527,6 +619,61 @@ hr {
     flex-direction: column;
     justify-content: space-around;
     align-items: center; }
+  #h1titles {
+    font-family: helvetica;
+    font-size: 4em;
+    /* color: #026C78; */
+    background: -webkit-linear-gradient(#03788e, #01a3a4);
+    -webkit-background-clip: text;
+    background-clip: none;
+    -webkit-text-fill-color: transparent;
+    color: #147283;
+    text-align: center;
+    margin-top: 1vh; }
+  .frase {
+    color: #01a3a4;
+    font-size: 2rem;
+    font-family: helvetica;
+    font-style: italic;
+    text-align: justify;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 7vh; }
+  .iconText {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5vh;
+    margin-bottom: 5vh; }
+  .iconList {
+    display: none;
+    width: 40vw;
+    margin-left: auto;
+    margin-right: auto; }
+  .iconList2 {
+    color: #01a3a4;
+    font-size: 3.5rem;
+    font-family: helvetica;
+    text-align: left;
+    margin-left: 10vw;
+    margin-right: auto; }
+  .iconList3 {
+    width: 40vw;
+    margin-left: auto;
+    margin-right: auto; }
+  #cardId {
+    width: 80vw;
+    margin-left: 10%;
+    margin-right: 10%;
+    position: center; }
+  .icon {
+    width: 80vw;
+    margin-left: auto;
+    margin-right: auto; }
   #grilla {
     display: flex;
     flex-direction: column;
@@ -613,7 +760,7 @@ hr {
     align-items: center;
     background-repeat: no-repeat; }
   .parallax2 {
-    background: url(../img/quienes_somos.png);
+    background: url(../img/quienes_somos.jfif);
     background-size: 100vw;
     height: 30%;
     align-items: center;
@@ -684,8 +831,51 @@ hr {
     background-clip: none;
     -webkit-text-fill-color: transparent;
     color: #147283;
-    text-align: center;
-    padding: 0rem; }
+    text-align: center; }
+  .frase {
+    color: #01a3a4;
+    font-size: 2.5rem;
+    font-family: helvetica;
+    font-style: italic;
+    text-align: justify;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 7vh; }
+  .iconText {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10vh;
+    margin-bottom: 10vh; }
+  .iconList {
+    display: none;
+    width: 40vw;
+    margin-left: auto;
+    margin-right: auto; }
+  .iconList2 {
+    color: #01a3a4;
+    font-size: 3.5rem;
+    font-family: helvetica;
+    text-align: left;
+    margin-left: 10vw;
+    margin-right: auto; }
+  .icon {
+    width: 60vw;
+    margin-left: auto;
+    margin-right: auto; }
+  .iconList3 {
+    width: 40vw;
+    margin-left: auto;
+    margin-right: auto; }
+  #cardId {
+    width: 80vw;
+    margin-left: 10%;
+    margin-right: 10%;
+    position: center; }
   #grilla {
     display: flex;
     flex-direction: column;
@@ -772,7 +962,7 @@ hr {
     align-items: center;
     background-repeat: no-repeat; }
   .parallax2 {
-    background: url(../img/quienes_somos.png);
+    background: url(../img/quienes_somos.jfif);
     background-size: 100vw;
     height: 42%;
     align-items: center;
